tests/fixtures/LatestTests/VariableDeclarationTests/errors/uninitialized_use_in_unary.fg
/; EXPECT_ERROR: VariableNotFound
var y:int = -x
var x:int = 10

